NoiseChisel pseudo-detections identified on threads
Before implementing the new NoiseChisel (with `gal_data_t'), it would
identify pseudo-detections (fill holes and open the result) on multiple
threads and be much more efficient. But in the new implementation, it done
everything on the whole image on one thread which was slow. So with this
commit, it now applies the same strategy as before and will do the job on
multiple threads. This was partly done in preparation for the segmentation,
where a similar multi-threaded approach (when asking for a check image) is
required.

The tiles that the pseudo-detections are found on are larger tiles than the
standard ones for sky or threshold definition. This was also necessary for
segmentation (when trying to find the clump S/N value based on the
undetected regions). In the process, a bug was found in the tessellation
(which would appear when only one tile was necessary for a dimension), and
it has been fixed.

--- a/bin/noisechisel/astnoisechisel.conf
+++ b/bin/noisechisel/astnoisechisel.conf
@@ -18,33 +18,36 @@
 # without any warranty.
 
 # Input:
- khdu               1
- minbfrac         0.5
- minnumfalse      100
+ khdu                1
+ minbfrac          0.5
+ minnumfalse       100
+
+# Tessellation
+ largetilesize 200,200
 
 # Detection:
- mirrordist       1.5
- modmedqdiff     0.01
- qthresh          0.3
- smoothwidth        3
- erode              2
- erodengb           4
- noerodequant  0.9331
- opening            1
- openingngb         8
- sigmaclip      3,0.2
- dthresh          0.0
- detsnminarea      10
- detquant        0.95
- dilate             3
+ mirrordist        1.5
+ modmedqdiff      0.01
+ qthresh           0.3
+ smoothwidth         3
+ erode               2
+ erodengb            4
+ noerodequant   0.9331
+ opening             1
+ openingngb          8
+ sigmaclip       3,0.2
+ dthresh           0.0
+ detsnminarea       10
+ detquant         0.95
+ dilate              3
 
 # Segmentation
- segsnminarea      15
- keepmaxnearriver   0
- segquant        0.95
- gthresh          0.5
- minriverlength    15
- objbordersn        1
+ segsnminarea       15
+ keepmaxnearriver    0
+ segquant         0.95
+ gthresh           0.5
+ minriverlength     15
+ objbordersn         1
 
 # Operating mode
- continueaftercheck 0
+ continueaftercheck  0
