New implementation of over-segmentation to find clumps
The new implementation of over-segmentation, as part of NoiseChisel, has
been completed with this commit. Finding clumps is an important part of the
segmentation in NoiseChisel and arguably one of the most complicated!

Other changes that have been done along with this commit:

  - The default value of `minbfrac' in NoiseChisel is now 0.8 as opposed to
    0.5, this will allow much better estimation of noise properties (by
    default). It may be slightly too high for a crowded field, but the
    users can change it on the command-line (or in a configuration file)
    for such datasets.

  - Valgrind (with `--leak-check=full') was run and many cases of leaked
    (non-freed) memory have been corrected.

  - All the variables defined in `GAL_DIMENSION_NEIGHBOR_OP' now start with
    a `gdn_' prefix so they don't get confused with those of the caller's
    functions.

--- a/bin/noisechisel/Makefile.am
+++ b/bin/noisechisel/Makefile.am
@@ -30,11 +30,11 @@ bin_PROGRAMS = astnoisechisel
 
 astnoisechisel_LDADD = -lgnuastro
 
-astnoisechisel_SOURCES = main.c ui.c detection.c noisechisel.c sky.c     \
-  segmentation.c threshold.c
+astnoisechisel_SOURCES = main.c ui.c clumps.c detection.c noisechisel.c \
+  sky.c segmentation.c threshold.c
 
-EXTRA_DIST = main.h authors-cite.h args.h ui.h detection.h noisechisel.h \
-  segmentation.h sky.h threshold.h
+EXTRA_DIST = main.h authors-cite.h args.h ui.h clumps.h detection.h     \
+  noisechisel.h segmentation.h sky.h threshold.h
 
 
 
