New implementation of NoiseChisel complete
The new implementation of NoiseChisel is now complete (with the
documentation and also several improvements compared to the last
commit). The list of changes are:

 - With the `--onlydetection' option, no segmentation will be done and
   there will also be no clumps extension. This is also a new name to the
   old `--onlydetect' option.

 - As a result of the change above, in MakeCatalog, the default `skyhdu'
   and `stdhdu' have been changed to the extension names instead of
   numbers.

 - The old `--minbfrac' option in NoiseChisel is now called `--minskyfrac'
   to be more clear, `b' might be confused with `blank'.

 - A major change compared to the previous commit is that the labeled
   images (for clumps and objects) now have the type `int32_t' (before they
   were `uint32_t'). This change was made because it is much more easier to
   use negative values for internal values and also for the diffuse region
   (for the clumps image). Also, the signed 32-bit integer is a standard
   recognized CFITSIO type. All the implementation of segmentation were
   also corrected.

 - A new bit-wise `flag' element was added to `gal_data_t' along with the
   necessary bit-wise macros for having blank values and if the dataset is
   sorted. Although currently on the blank values flag are
   implemented. `gal_blank_present' will now use these flags (if they are
   present) and this can greatly help in not re-checking a dataset. This
   benefited many library functions that NoiseChisel currently uses now and
   will benefit many more in the future.

 - NoiseChisel's output functions have been written.

 - `gal_type_bit_string' has replaced `gal_data_bit_print_stream', since we
   usually want the bit-stream when thinking in a specific type.

 - The Arithmetic program tests that depended on NoiseChisel have been
   corrected and now pass.

 - `tests/during-dev.sh' now also accepts the number of threads to build
   Gnuastro with.

 - `tmpf

--- a/bin/mkcatalog/astmkcatalog.conf
+++ b/bin/mkcatalog/astmkcatalog.conf
@@ -20,8 +20,8 @@
 # Input:
  objhdu          2
  clumphdu        3
- skyhdu          4
- stdhdu          5
+ skyhdu        SKY
+ stdhdu    SKY_STD
  zeropoint     0.0
  skysubtracted   0
 
