New implementation of MakeCatalog now complete
The re-write of MakeCatalog using all the new features provided by
`gal_data_t' has been completed. The most important difference is that
MakeCatalog will now treat each object completely independently (on a
separate thread). Previously it would do two scans over the whole image and
calculate the properties of all the objects together, but that structure
was not easily extensible/flexible. This change was done following the
future plan that was presented in the a given in the 26th ADASS in Trieste
(https://arxiv.org/abs/1611.06387v1). Another major change is that the
upper-limit magnitude can now also be found for clumps (thanks to the
tessellation library of Gnuastro).

This commit also involved several other changes that are listed below:

 - A joke: `make love' is a new Gnuastro build-time joke rule. It was
   mentioned by Stuart Feldman (creator of Make) in "The art of unix
   programming" and an old joke, so I thought it would be entertaining to
   have in Gnuastro too!

 - The keys that define the options in all Gnuastro programs started with
   the `ARGS_OPTION_KEY_' prefix. But this prefix didn't follow the naming
   convension of having the filename being the first part of the prefix. So
   these key prefixes are now `UI_KEY_' in all the programs (because they
   are defined in each program's `ui.h'.

 - Arithmetic was missing the `int32' and `uint32' type converters that
   have been added with this commit.

 - MakeProfiles now uses `gal_fits_img_write_to_type' to write the output
   in the user's requested type. This function was defined after the new
   implementation of MakeProfiles.

 - New `--cleandilated' option for NoiseChisel to remove dilated objects
   that have a low S/N (it is mainly useful on very clean or mock images),
   for non-clean noise, it will result in a decrease of completeness. With
   this new option, NoiseChisel will also print detection S/N values when
   run with the `--checkdetsn' 

--- a/Makefile.am
+++ b/Makefile.am
@@ -314,3 +314,15 @@ $(top_srcdir)/AUTHORS: $(top_srcdir)/.version
 ## distribution. Note that AUTHORS depends on `.version'.
 dist-hook: $(top_srcdir)/AUTHORS
 	echo $(VERSION) > $(distdir)/.tarball-version
+
+
+
+
+## Nice joke
+## =========
+##
+## This joke is taken from the "The art of unix programming", and a quote
+## by Stuart Feldman (creator of Make): "One of the older Unix jokes is
+## "Make love" which results in "Don’t know how to make love"."
+love:
+	@echo "Don't know how to make love!"
