--- a/bin/mkcatalog/astmkcatalog.conf
+++ b/bin/mkcatalog/astmkcatalog.conf
@@ -18,46 +18,20 @@
 # without any warranty.
 
 # Input:
- objhdu          2
- clumphdu        3
- skyhdu        SKY
- stdhdu    SKY_STD
- zeropoint     0.0
- skysubtracted   0
+ hdu                1
+ objectshdu         2
+ clumpshdu          3
+ skyhdu           SKY
+ stdhdu       SKY_STD
+ zeropoint        0.0
+ skysubtracted      0
 
 # Output:
- nsigmag         1
- intwidth        6
- floatwidth     13
- accuwidth      15
- floatprecision  3
- accuprecision   8
+ nsigmag            1
 
 # Upper limit magnitude:
- upnum         200
- upsclipmultip   3
- upsclipaccu   0.2
- upnsigma        1
+ upnum            100
+ upsigmaclip    3,0.2
+ upnsigma           1
 
 # Catalog columns:
-# sn              1
-# std             1
-# sky             1
-# rivernum        1
-# riverave        1
-# clumpsdec       1
-# clumpsra        1
-# clumpsy         1
-# clumpsx         1
-# clumpsmagnitude 1
-# clumpsarea      1
-# numclumps       1
-# magnitude       1
-# area            1
-# dec             1
-# ra              1
-# y               1
-# x               1
-# idinhostobj     1
-# hostobjid       1
- id              1
