wcslib_version and restrict config macros
To verify if `wcslib_version' is present, previously we would only check
the existence of `GAL_CONFIG_HAVE_WCSLIB_VERSION'. But this was changed and
the macro now always exists, it just has a value of 0 or 1. So on Systems
where this function isn't present, there were unidentified linker
errors. This has been corrected.

Also, to help speed up the low-level processing of the `array' element of
`gal_data_t', we defined it as a restricted pointer. However, when the C89
compiler doesn't have an actual `restrict', this would cause compiler
problems during the checks (and later for library users). This problem
didn't exist in Gnuastro's programs because Gnulib has some good tests to
avoid such problems. So the result of Gnulib's configure time checks have
been used to define `restrict' in `gnulib/config.h'. This way, library
users can also benefit from the restrict pointer if their system supports
it. If it doesn't, `restrict' will be ignored (defined as an empty CPP
macro).

The dependency of the `mkcatalog/aperturephot.sh' test was missing a `.log'
so it would be skipped sometimes in parallel checks. This has been
corrected.

These issues were found and corrected with the great help of Alan Lefor on
some of his systems and his prompt remote checks. So I am very grateful to
him.

I am also working on updating the library documentation and some is
included in this commit.

--- a/configure.ac
+++ b/configure.ac
@@ -180,9 +180,20 @@ AC_SUBST(HAVE_PTHREAD_BARRIER, [$has_pthread_barrier])
 
 
 
-#Gnulib checks:
+# Gnulib checks:
 gl_INIT
 
+
+
+
+# Gnulib checks for the proper name for the C99 equivalent `restrict'
+# keyword and puts it in the `ac_cv_c_restrict' variable. If none exists,
+# it will put a `no' inside of this variable. As described in the output
+# `bootstrapped/m4/gnulib-common.m4', this is only necessary until Autoconf
+# 2.70 is released. Afterwards, we can use AC_C_RESTRICT.
+AS_IF([test "x$ac_cv_c_restrict" = "xno"],
+      [gal_restrict_replace=], [gal_restrict_replace=$ac_cv_c_restrict])
+AC_SUBST(RESTRICT_REPLACEMENT, [$gal_restrict_replace])
 
 
 
