Updating doc, lib. check as scripts, and lib. cleanup
This work started with updating the documentation and in particular
starting to describe `gal_data_t'. As it progressed, several corrections
were made in the code and checks that are listed below. The documentation
work is not complete, but these changes are large enough to warrant a
commit.

 - The library chapter of the book now has a "Library demo programs"
   section that will have some simple programs to help users get started
   with the libraries.

 - The two functions `gal_data_alloc_number' and
   `gal_data_string_fixed_alloc_size' were not used anywhere in Gnuastro
   and not very generic, so they were removed. The one usage of the first
   (in `gal_data_string_to_number') was replaced with an `mmap' call and
   the second was moved into `lib/fits.c' as a static function.

 - To be more clear (mainly motivated by the book), the first argument to
   `gal_data_array_free' was changed to `dataarr' (previously it was just
   `data').

 - The library `multithread' check, now reads one of the images created
   during `make check' and prints its values by multiple threads thus both
   testing the reading of data into memory and the multithreaded
   features. This new re-write now also uses the new high-level
   `gal_threads_spin_off' function instead of the direct low-level usage of
   pthreads libraries.

 - Until now the actual library executable was tested (`check_PROGRAMS' was
   one of the values in `TESTS' in `Makefile.am'). This would cause
   problems when we wanted the library tests to depend on other tests: the
   tests creating the dependencies would be run multiple times. So after
   reviewing the "Scripts based testsuites", I noticed that we should
   actually also build scripts to run the `check_PROGRAMS'
   executables. This will allow them to also have their dependencies. So
   the two `lib/versioncpp.sh' and `lib/multithread.sh' scripts were
   created and are now in charge of testing the exec

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -177,6 +177,7 @@ AM_CPPFLAGS = -I../lib
 
 # Environment variables for the test scripts.
 AM_TESTS_ENVIRONMENT =                              \
+export mkdir_p="$(MKDIR_P)";                        \
 export topsrc=$(top_srcdir);                        \
 export haslibjpeg=$(MAYBE_HASLIBJPEG);              \
 export hasghostscript=$(MAYBE_HASGHOSTSCRIPT);
@@ -185,21 +186,32 @@ export hasghostscript=$(MAYBE_HASGHOSTSCRIPT);
 
 
 
-# Compilations that are to be done with `make check'.
+# Library checks
+# ==============
+#
+# The Gnuastro library is checked by compiling programs and linking them
+# with the library. As described in the last paragraph of the "Scripts
+# based test suites" section of the Automake manual, all targets specified
+# by `check_PROGRAMS' are compiled prior to actually running the targets of
+# `TESTS'. So they do not need to be specified as any dependency, they will
+# be present when the `.sh' based tests are run.
 LDADD = -lgnuastro
 check_PROGRAMS = versioncpp multithread
 versioncpp_SOURCES = lib/versioncpp.cpp
 multithread_SOURCES = lib/multithread.c
+lib/multithread.sh: mkprof/mosaic1.sh.log
 
 
 
 
-# The actual test scripts that are run:
-TESTS = prepconf.sh $(check_PROGRAMS) $(MAYBE_ARITHMETIC_TESTS)		   \
-  $(MAYBE_CONVERTT_TESTS) $(MAYBE_CONVOLVE_TESTS) $(MAYBE_COSMICCAL_TESTS) \
-  $(MAYBE_CROP_TESTS) $(MAYBE_FITS_TESTS) $(MAYBE_MKCATALOG_TESTS)	   \
-  $(MAYBE_MKNOISE_TESTS) $(MAYBE_MKPROF_TESTS) $(MAYBE_NOISECHISEL_TESTS)  \
-  $(MAYBE_STATISTICS_TESTS) $(MAYBE_SUBTRACTSKY_TESTS)			   \
+# Final Tests
+# ===========
+TESTS = prepconf.sh lib/versioncpp.sh lib/multithread.sh                \
+  $(MAYBE_ARITHMETIC_TESTS) $(MAYBE_CONVERTT_TESTS)                     \
+  $(MAYBE_CONVOLVE_TESTS) $(MAYBE_COSMICCAL_TESTS) $(MAYBE_CROP_TESTS)  \
+  $(MAYBE_FITS_TESTS) $(MAYBE_MKCATALOG_TESTS) $(MAYBE_MKNOISE_TESTS)   \
+  $(MAYBE_MKPROF_TESTS) $(MAYBE_NOISECHISEL_TESTS)                      \
+  $(MAYBE_STATISTICS_TESTS) $(MAYBE_SUBTRACTSKY_TESTS)                  \
   $(MAYBE_TABLE_TESTS) $(MAYBE_WARP_TESTS)
 
 
