BuildProgram: to easily compile and link with Gnuastro's library
Gnuastro's library contains many wrappers to other libraries (for reading
FITS files for example) and managing all the linkings can be a big hurdle
to making small programs to check an idea or a hunch. So I created
BuildProgram within Gnuastro to greatly simply this job. It will use the
linking information that was gathered during the creation of Gnuastro to
build link with the user's program. In this way, the user doesn't have to
worry about linking.

BuildProgram also accepts the standard `-I', `-L', and `-l' compiler
options so if the user wants to use other libraries, it is easily
possible. This program is actually just a new implementation of the
`astcompilerun' shell function that was introduced in the old "Automatic
linking script" section of the manual (that section has now been
removed).

The main reason I chose to write a program for this job over a script is
Argp and all the option management features (for example with configuration
files) in Gnuastro's programs. It was not easy to implement all those
features with a shell script for me. So I just made a copy of the
`bin/TEMPLATE' directory and made this program instead. This also makes for
a similar user experience for all programs that start with `ast'.

--- a/Makefile.am
+++ b/Makefile.am
@@ -50,6 +50,9 @@ BUILT_SOURCES = $(top_srcdir)/AUTHORS
 if COND_ARITHMETIC
   MAYBE_ARITHMETIC = bin/arithmetic
 endif
+if COND_BUILDPROG
+  MAYBE_BUILDPROG = bin/buildprog
+endif
 if COND_CONVERTT
   MAYBE_CONVERTT = bin/convertt
 endif
@@ -104,11 +107,12 @@ endif
 ## conditions above). When `MAYBE_TEMPLATE' is not defined, then Make will
 ## see it as a blank string and igonore it, so there is no problem with
 ## having an uncommented `MAYBE_TEMPLATE' as a value in `SUBDIRS'.
-SUBDIRS = bootstrapped/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_ARITHMETIC) \
-  $(MAYBE_CONVERTT) $(MAYBE_CONVOLVE) $(MAYBE_COSMICCAL) $(MAYBE_CROP)  \
-  $(MAYBE_FITS) $(MAYBE_MKCATALOG) $(MAYBE_MKNOISE) $(MAYBE_MKPROF)     \
-  $(MAYBE_NOISECHISEL) $(MAYBE_STATISTICS) $(MAYBE_TABLE)               \
-  $(MAYBE_TEMPLATE) $(MAYBE_WARP) doc tests
+SUBDIRS = bootstrapped/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_ARITHMETIC)  \
+  $(MAYBE_BUILDPROG) $(MAYBE_CONVERTT) $(MAYBE_CONVOLVE)                 \
+  $(MAYBE_COSMICCAL) $(MAYBE_CROP) $(MAYBE_FITS) $(MAYBE_MKCATALOG)      \
+  $(MAYBE_MKNOISE) $(MAYBE_MKPROF) $(MAYBE_NOISECHISEL)                  \
+  $(MAYBE_STATISTICS) $(MAYBE_TABLE) $(MAYBE_TEMPLATE) $(MAYBE_WARP) doc \
+  tests
 
 
 
