--- a/bin/buildprog/astbuildprog.conf
+++ b/bin/buildprog/astbuildprog.conf
@@ -1,5 +1,5 @@
-# Default parameters (System) for TEMPLATE.
-# TEMPLATE is part of GNU Astronomy Utitlies.
+# Default parameters (System) for BuildProgram.
+# BuildProgram is part of GNU Astronomy Utitlies.
 #
 # Use the long option name of each paramter followed by
 # a value. The name and value should be separated by
